<resources>
    <string name="app_name">RoomSchedule</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit_app">Exit App</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="event_time_format"> until %s</string>
    <string name="event_time_format1"> No Events at this time</string>
    <string name="help_info_format"> Please contact %s or use this form to send a message.</string>


    <string-array name="duration_array">
        <item>30 min</item>
        <item>1 Hr</item>
        <item>2 Hr</item>
    </string-array>
    <string-array name="domains_array">
        <item>\@mail.umkc.edu</item>
        <item>\@umkc.edu</item>
    </string-array>
    <string-array name="meeting_titles">
        <item>Study Group</item>
        <item>General</item>
        <item>Workshop</item>
    </string-array>
    <string name="title_activity_help">Help</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Your Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This message is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_reserve">Enable Reserve Now</string>
    <string name="pref_description_reserve">Reservation through with device
    </string>

    <string name="pref_title_reserve_message">Unavailable Message</string>
    <string name="pref_description_reserve_message">Sorry, the Reservation through this Device is "UNAVAILABLE"
    </string>

    <string name="pref_title_room_name">Room name</string>
    <string name="pref_default_room_name">007D</string>

    <string name="pref_title_admin_phone">Admin Phone</string>
    <string name="pref_default_admin_phone">(XXX) XXX-XXXX</string>

    <string name="pref_title_admin_name">Admin name</string>
    <string name="pref_default_admin_name">Admin</string>

    <string name="pref_title_admin_email">Admin Email</string>
    <string name="pref_default_admin_email">admin@umkc.edu</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_room_name">Room Names</string>
    <string-array name="pref_room_titles">
        <item>00003</item>
        <item>00004</item>
        <item>007E</item>
        <item>00005</item>
        <item>007D</item>
        <item>007H</item>
        <item>030</item>
        <item>pass</item>
    </string-array>
    <string-array name="pref_room_values">
        <item>00003</item>
        <item>00004</item>
        <item>007E</item>
        <item>00005</item>
        <item>007D</item>
        <item>007H</item>
        <item>030</item>
        <item>pass</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="available_text">AVAILABLE</string>
    <string name="not_available_text">NOT AVAILABLE</string>

    <!-- Calendar -->
    <string name="title_activity_basic">Schedule</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
</resources>
