<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
   <!-- <EditTextPreference
        android:capitalize="characters"
        android:defaultValue="@string/pref_default_room_name"
        android:inputType="textCapWords"
        android:key="room_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_room_name" />-->

    <ListPreference
        android:defaultValue="pref_default_room_name"
        android:entries="@array/pref_room_titles"
        android:entryValues="@array/pref_room_values"
        android:key="room_name"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_room_name" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="reserve_switch"
        android:summary="@string/pref_description_reserve"
        android:title="@string/pref_title_reserve" />

    <EditTextPreference
        android:capitalize="sentences"
        android:title="@string/pref_title_reserve_message"
        android:inputType="textCapSentences"
        android:key="room_info_message"
        android:maxLines="2"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:defaultValue="@string/pref_description_reserve_message" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_admin_name"
        android:inputType="textCapWords"
        android:key="admin_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_admin_name" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_admin_phone"
        android:inputType="phone"
        android:key="admin_phone"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_admin_phone" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_admin_email"
        android:hint="abc@umkc.edu"
        android:inputType="textEmailAddress"
        android:key="admin_email"
        android:selectAllOnFocus="true"
        android:title="@string/pref_title_admin_email" />
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>
</PreferenceScreen>
